[tool.poetry]
name = "certrenewer"
version = "0.1.0"
description = "Script for renewing SSL certificates and creating backups"
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
paramiko = "^2.7"
pytest-mock = "^3.11.1"
pytest = "^7.4.2"
argparse = "^1.4.0"
